app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__AccessToken__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>