app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__Connection_Status__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Connection_Status__c</fullName>
        <label>Connection Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>