app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__ConsumerKey__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>