app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__ConsumerSecret__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>