app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__InstanceURL__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__InstanceURL__c</fullName>
        <label>Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>