app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__Is_SandBox__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Is_SandBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SandBox</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>