app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__Org_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Org_Id__c</fullName>
        <label>Org Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>