app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__User_Full_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__User_Full_Name__c</fullName>
        <label>User Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>