app/main/default/objects/FlosumBackup__Destination_Org__c/fields/FlosumBackup__Username__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>